[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["WoolDoughnut310 <wooldoughnutspi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.103.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
